can now delete blends, and fixed overflow yuckiness with saved blends

--- a/styles.css
+++ b/styles.css
@@ -39,3 +39,16 @@ button {
 .hidden {
     display: none;
 }
+
+tr {
+    max-width: 100vw;
+    overflow: hidden;
+}
+
+#saved-blends {
+    max-width: 650px;
+}
+
+#saved-blends td {
+    float: left;
+}
